# WFC3Library

./: .gitignore  CHANGES.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment.yml  setup.cfg  setup.py  wfc3_env_legacy.yml  wfc3_env_legacy_no_builds.yml
docs/: conf.py  index.rst  make.bat  rtd-pip-requirements
docs/notebooks/: README  wf3persist.ipynb
docs/wfc3tools/: calwf3.rst  embedsub.rst  history.rst  ir_pipeline.inc  pstack.rst  pstat.rst  sampinfo.rst  sub2full.rst  uvis_pipeline.inc  wf32d.rst  wf3ccd.rst  wf3cte.rst  wf3ir.rst  wf3rej.rst  wfc3tools.rst
notebooks/calwf3_recalibration/: README.md  calwf3_recal_tvb.html  calwf3_recal_tvb.ipynb
notebooks/calwf3_v1.0_cte/: README.md  archived_drkcfiles.txt  calwf3_with_v1.0_PCTE.html  calwf3_with_v1.0_PCTE.ipynb
notebooks/dash/: README.md  dash.ipynb  reduce_dash.py  utils.py
notebooks/exception_report/: README.md  wfc3_exception_report.ipynb
notebooks/filter_transformations/: README.md  filter_transformations.html  filter_transformations.ipynb
notebooks/flux_conversion_tool/: README.md  flux_conversion_tool.html  flux_conversion_tool.ipynb
notebooks/ima_viewer/: README.md  ima_tools.py  ima_viewer.html  ima_viewer.ipynb
notebooks/persistence/: README.md  (+2 more)
tests/: test_calwf3.py
wfc3tools/: __init__.py  calwf3.help  calwf3.py  embedsub.help  embedsub.py  pstack.help  pstack.py  pstat.help  pstat.py  sampinfo.help  sampinfo.py  sub2full.help  sub2full.py  util.py  wf32d.help  wf32d.py  wf3ccd.help  wf3ccd.py  wf3cte.help  wf3cte.py  wf3ir.help  wf3ir.py  wf3rej.help  wf3rej.py
(+60 files in other folders)
